# rosclaw-examples

./: .gitignore  README.md
gimbal-dance-demo/: QUICKSTART.md  README.md  pyproject.toml  requirements.txt  visualization.html  visualization_server.py
gimbal-dance-demo/config/: gimbal_config.yaml
gimbal-dance-demo/examples/: demo_10gimbals_simulation.py  demo_6gimbals_hardware.py
gimbal-dance-demo/src/: dance_mcp_server.py  gcu_gimbal_control.py  music_analyzer.py  rhythm_engine.py
